Basic set of search filters.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -24,11 +24,13 @@
   "allow-showing-comment-google-play": "<0>Allow</0> showing the <1>{commentName}</1>'s comment \"{commentHeading}\" to the <1>{postingName}</1>'s post \"{postingHeading}\" on Android (Google Play).",
   "allow-showing-post-google-play": "<0>Allow</0> showing the <1>{name}</1>'s post \"{heading}\" on Android (Google Play).",
   "any": "Any",
+  "anybody": "Anybody",
   "application-name": "Application name",
   "ask": "Ask",
   "ask-count": "Ask {count} {count, plural, one {user} other {users}}",
   "asking-access-permissions": "is asking to access your blog with the following permissions:",
   "ask-node": "Ask {name}",
+  "author": "Author",
   "auto": "Auto",
   "auto-hide-comments": "Automatically hide comments",
   "avatar": "Avatar",
@@ -277,10 +279,12 @@
   "hide-subscription-to-me": "Hide subscription to me",
   "horizontal-line": "Horizontal line",
   "how-often-blog-search": "How often was your blog found on Google and other search engines in the past week?",
+  "i": "Me",
   "i-agree": "I agree",
   "ignore": "Ignore",
   "image": "Image",
   "image-internet": "Image from the Internet",
+  "images": "Images",
   "image-size": {
     "custom": "Custom",
     "full": "Full",
@@ -292,9 +296,11 @@
   "in": "in",
   "in-blocked": "In blocked",
   "in-blocked-plural": "In blocked",
+  "in-blog": "In the blog",
   "increase-indent": "Increase indent",
   "in-friends": "In friends",
   "inline-formula": "Inline formula",
+  "in-newsfeed": "In the newsfeed",
   "in-post": "In the post",
   "insert-into-text": "Insert into text",
   "insert-link": "Insert a link",
@@ -390,6 +396,7 @@
   "login-incorrect": "Blog name or password is incorrect",
   "male": "Male",
   "male-short": "m.",
+  "many": "Many",
   "mark": "Mark",
   "mark-all-read": "Mark All as Read",
   "mark-read": "Mark as Read",
@@ -447,6 +454,7 @@
   "nothing-yet": "Nothing yet.",
   "notify-about-update": "Notify followers about the update",
   "notify-followers": "Notify followers",
+  "not-matter": "Does not matter",
   "not-now": "Not now",
   "not-publish-my-complaint": "Please, do not publish my complaint",
   "not-show-complaints": "Do not show complaints",
@@ -491,6 +499,7 @@
   "post-not-allowed": "You cannot post to this blog.",
   "post-preview": "Preview post",
   "preparing": "Preparing...",
+  "present": "Present",
   "preserve-formatting": "Preserve formatting",
   "previous-image": "Previous image",
   "principal-title": {
@@ -581,6 +590,7 @@
   "remind-later": "Remind later",
   "rename-token": "Rename a Token",
   "reply": "Reply",
+  "reply-my-comment": "Reply to my comment",
   "reply-prev-comment": "Reply to previous comment",
   "report-sheriff": "Report to sheriff",
   "report-sheriff-sent": "Report to sheriff sent",
@@ -855,6 +865,7 @@
   },
   "settings": "Settings",
   "settings-incorrect-values": "Some settings have incorrect values.",
+  "several": "Several",
   "share": "Share",
   "share-page": "Share page",
   "sheriff-decided-not-publish-complaints": "The sheriff decided not to publish the complaints.",
@@ -968,6 +979,7 @@
   "user-comments-hidden": "This user's comments are hidden",
   "validating-access-request": "Validating access request",
   "verify-signature": "Verify signature",
+  "video": "Video",
   "video-internet": "Video from the Internet",
   "view-as-chart": "View as chart",
   "view-as-list": "View as list",
@@ -998,6 +1010,7 @@
   "whats-new": "What's new with you?",
   "where-from": "Where it comes from?",
   "where-go": "Where do you want to go?",
+  "where-look": "Where to look",
   "why-delete-blog": "Why are you deleting the blog? (optional)",
   "why-not-set-avatar": "<0>Haven't set an avatar yet?</0> Your avatar will make it easy for others to recognize you in discussions.",
   "why-not-set-full-name": "<0>Haven't set a full name yet?</0> A beautiful full name will appear in your posts and comments instead of the username. For example, instead of <1>{name}</1>, it will say <1>{full}</1>. It can be your real name or any other name you like. And you can change it at any time.",
