--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -24,11 +24,13 @@
   "allow-showing-comment-google-play": "<0>Zezwalaj</0> na wyświetlanie na Androidzie komentarza użytkownika <1>{commentName}</1> „{commentHeading}” do posta użytkownika <1>{postingName}</1> „{postingHeading}” (Google Play).",
   "allow-showing-post-google-play": "<0>Zezwalaj</0> na wyświetlanie posta użytkownika <1>{name}</1> „{heading}” na Androidzie (Google Play).",
   "any": "Dowolny",
+  "anybody": "Ktokolwiek",
   "application-name": "Nazwa aplikacji",
   "ask": "Zapytaj",
   "ask-count": "Zapytaj {count} {count, plural, one {użytkownika} few {użytkowników} many {użytkowników} other {użytkowników}}",
   "asking-access-permissions": "prosi o dostęp do Twojego bloga z następującymi uprawnieniami:",
   "ask-node": "Zapytaj {name}",
+  "author": "Autor",
   "auto": "Auto",
   "auto-hide-comments": "Automatycznie ukrywaj komentarze",
   "avatar": "Awatar",
@@ -277,10 +279,12 @@
   "hide-subscription-to-me": "Ukryj subskrypcję do mnie",
   "horizontal-line": "Linia pozioma",
   "how-often-blog-search": "Jak często Twój blog był znajdowany w Google i innych wyszukiwarkach w ostatnim tygodniu?",
+  "i": "Ja",
   "i-agree": "Zgadzam się",
   "ignore": "Ignoruj",
   "image": "Obrazek",
   "image-internet": "Obraz z Internetu",
+  "images": "Obrazy",
   "image-size": {
     "custom": "Niestandardowy",
     "full": "Pełny",
@@ -292,9 +296,11 @@
   "in": "w",
   "in-blocked": "Zablokowany",
   "in-blocked-plural": "Zablokowani",
+  "in-blog": "W blogu",
   "increase-indent": "Zwiększ wcięcie",
   "in-friends": "W znajomych",
   "inline-formula": "Formuła w tekście",
+  "in-newsfeed": "W kanale wiadomości",
   "in-post": "W poście",
   "insert-into-text": "Wstaw do tekstu",
   "insert-link": "Wstaw link",
@@ -390,6 +396,7 @@
   "login-incorrect": "Nazwa bloga lub hasło są nieprawidłowe",
   "male": "Mężczyzna",
   "male-short": "m.",
+  "many": "Wiele",
   "mark": "Zaznacz",
   "mark-all-read": "Oznacz wszystko jako przeczytane",
   "mark-read": "Oznacz jako przeczytane",
@@ -447,6 +454,7 @@
   "nothing-yet": "Jeszcze nic.",
   "notify-about-update": "Powiadom obserwujących o aktualizacji",
   "notify-followers": "Powiadom obserwujących",
+  "not-matter": "Nie ma znaczenia",
   "not-now": "Nie teraz",
   "not-publish-my-complaint": "Proszę nie publikować mojej skargi",
   "not-show-complaints": "Nie pokazuj skarg",
@@ -491,6 +499,7 @@
   "post-not-allowed": "Nie możesz publikować na tym blogu.",
   "post-preview": "Podgląd posta",
   "preparing": "Przygotowywanie...",
+  "present": "Jest",
   "preserve-formatting": "Zachowaj formatowanie",
   "previous-image": "Poprzednie zdjęcie",
   "principal-title": {
@@ -581,6 +590,7 @@
   "remind-later": "Przypomnij mi później",
   "rename-token": "Zmień nazwę tokena",
   "reply": "Odpowiedz",
+  "reply-my-comment": "Odpowiedz na mój komentarz",
   "reply-prev-comment": "Odpowiedz na poprzedni komentarz",
   "report-sheriff": "Zgłoś do szeryfa",
   "report-sheriff-sent": "Skarga została wysłana do szeryfa",
@@ -855,6 +865,7 @@
   },
   "settings": "Ustawienia",
   "settings-incorrect-values": "Niektóre ustawienia mają nieprawidłowe wartości.",
+  "several": "Kilka",
   "share": "Udostępnij",
   "share-page": "Udostępnij stronę",
   "sheriff-decided-not-publish-complaints": "Szeryf zdecydował się nie publikować skarg.",
@@ -968,6 +979,7 @@
   "user-comments-hidden": "Komentarze tego użytkownika są ukryte",
   "validating-access-request": "Weryfikacja żądania dostępu",
   "verify-signature": "Zweryfikuj podpis",
+  "video": "Wideo",
   "video-internet": "Wideo z Internetu",
   "view-as-chart": "Wyświetl jako wykres",
   "view-as-list": "Wyświetl jako listę",
@@ -998,6 +1010,7 @@
   "whats-new": "Co nowego u ciebie?",
   "where-from": "Skąd to pochodzi?",
   "where-go": "Dokąd chcesz się udać?",
+  "where-look": "Gdzie szukać",
   "why-delete-blog": "Dlaczego usuwasz blog? (opcjonalnie)",
   "why-not-set-avatar": "<0>Jeszcze nie ustawiłeś awatara?</0> Dzięki awatarowi łatwo cię rozpoznają w dyskusjach.",
   "why-not-set-full-name": "<0>Jeszcze nie ustawiłeś pełnego imienia?</0> Piękne pełne imię będzie pojawiać się w twoich postach i komentarzach zamiast nazwy użytkownika. Na przykład, zamiast <1>{name}</1>, będzie napisane <1>{full}</1>. To może być twoje prawdziwe imię lub dowolne inne, które ci się podoba. I możesz je zmienić w dowolnym momencie.",
