--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -24,11 +24,13 @@
   "allow-showing-comment-google-play": "<0>Разрешить</0> показ комментария <1>{commentName}</1> \"{commentHeading}\" к посту <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
   "allow-showing-post-google-play": "<0>Разрешить</0> показ поста <1>{name}</1> \"{heading}\" на Android (Google Play).",
   "any": "Любой",
+  "anybody": "Любой",
   "application-name": "Имя приложения",
   "ask": "Попросить",
   "ask-count": "Попросить {count} {count, plural, one {пользователя} other {пользователей}}",
   "asking-access-permissions": "запрашивает доступ к вашему блогу со следующими полномочиями:",
   "ask-node": "Попросить {name}",
+  "author": "Автор",
   "auto": "Авто",
   "auto-hide-comments": "Автоматически скрывать комментарии",
   "avatar": "Аватарка",
@@ -277,10 +279,12 @@
   "hide-subscription-to-me": "Скрыть подписку на меня",
   "horizontal-line": "Горизонтальная линия",
   "how-often-blog-search": "Как часто ваш блог находили в Google и других поисковых системах за последнюю неделю?",
+  "i": "Я",
   "i-agree": "Я {gender, select, female {согласна} other {согласен}}",
   "ignore": "Игнорировать",
   "image": "Картинка",
   "image-internet": "Картинка из Интернета",
+  "images": "Картинки",
   "image-size": {
     "custom": "Любой",
     "full": "Полный",
@@ -292,9 +296,11 @@
   "in": "в",
   "in-blocked": "Заблокировал",
   "in-blocked-plural": "Заблокировали",
+  "in-blog": "В блоге",
   "increase-indent": "Увеличить отступ",
   "in-friends": "В друзьях",
   "inline-formula": "Встроенная формула",
+  "in-newsfeed": "В ленте новостей",
   "in-post": "В посте",
   "insert-into-text": "Вставить в текст",
   "insert-link": "Вставить ссылку",
@@ -390,6 +396,7 @@
   "login-incorrect": "Неверное имя блога или пароль",
   "male": "Мужской",
   "male-short": "м.",
+  "many": "Много",
   "mark": "Отметить",
   "mark-all-read": "Все прочитаны",
   "mark-read": "Отметить как прочитанное",
@@ -447,6 +454,7 @@
   "nothing-yet": "Тут пока пусто.",
   "notify-about-update": "Уведомить подписчиков об обновлении",
   "notify-followers": "Уведомить подписчиков",
+  "not-matter": "Не имеет значения",
   "not-now": "Не сейчас",
   "not-publish-my-complaint": "Пожалуйста, не публикуйте мою жалобу",
   "not-show-complaints": "Не показывать жалобы",
@@ -491,6 +499,7 @@
   "post-not-allowed": "Вы не можете писать в этот блог.",
   "post-preview": "Предпросмотр поста",
   "preparing": "Подготовка...",
+  "present": "Есть",
   "preserve-formatting": "Сохранить форматирование",
   "previous-image": "Предыдущая картинка",
   "principal-title": {
@@ -581,6 +590,7 @@
   "remind-later": "Напомнить позже",
   "rename-token": "Переименовать токен",
   "reply": "Ответить",
+  "reply-my-comment": "Ответ на мой комментарий",
   "reply-prev-comment": "Ответ на предыдущий комментарий",
   "report-sheriff": "Пожаловаться шерифу",
   "report-sheriff-sent": "Жалоба шерифу отправлена",
@@ -855,6 +865,7 @@
   },
   "settings": "Настройки",
   "settings-incorrect-values": "Некоторые настройки установлены в неверные значения.",
+  "several": "Несколько",
   "share": "Поделиться",
   "share-page": "Поделиться страницей",
   "sheriff-decided-not-publish-complaints": "Шериф принял решение не публиковать жалобы.",
@@ -968,6 +979,7 @@
   "user-comments-hidden": "Комментарии этого пользователя скрываются",
   "validating-access-request": "Проверка запроса на доступ",
   "verify-signature": "Проверить подпись",
+  "video": "Видео",
   "video-internet": "Видео из Интернета",
   "view-as-chart": "В виде диаграммы",
   "view-as-list": "В виде списка",
@@ -998,6 +1010,7 @@
   "whats-new": "Что у вас нового?",
   "where-from": "Откуда он взят?",
   "where-go": "Куда вы хотите пойти?",
+  "where-look": "Где искать",
   "why-delete-blog": "Почему вы удаляете блог? (необязательно)",
   "why-not-set-avatar": "<0>Ещё не установили аватарку?</0> По аватарке вас будет легко узнать в обсуждениях.",
   "why-not-set-full-name": "<0>Ещё не установили полное имя?</0> Красивое полное имя будет появляться в ваших постах и комментариях вместо имени пользователя. Например, вместо <1>{name}</1> будет написано <1>{full}</1>. Это может быть ваше настоящее имя или любое другое, которое вам нравится. И его можно будет сменить в любой момент.",
