--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -24,11 +24,13 @@
   "allow-showing-comment-google-play": "<0>Дозволити</0> показ коментаря <1>{commentName}</1> \"{commentHeading}\" до поста <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
   "allow-showing-post-google-play": "<0>Дозволити</0> показ посту <1>{name}</1> \"{heading}\" на Android (Google Play).",
   "any": "Будь-який",
+  "anybody": "Будь-хто",
   "application-name": "Ім'я додатку",
   "ask": "Попросити",
   "ask-count": "Попросити {count} {count, plural, one {користувача} other {користувачів}}",
   "asking-access-permissions": "просить доступ до вашого блогу з наступними дозволами:",
   "ask-node": "Попросити {name}",
+  "author": "Автор",
   "auto": "Авто",
   "auto-hide-comments": "Автоматично приховувати коментарі",
   "avatar": "Аватар",
@@ -277,10 +279,12 @@
   "hide-subscription-to-me": "Приховати підписку на мене",
   "horizontal-line": "Горизонтальна лінія",
   "how-often-blog-search": "Як часто ваш блог знаходили в Google та інших пошукових системах за останній тиждень?",
+  "i": "Я",
   "i-agree": "Я погоджуюсь",
   "ignore": "Ігнорувати",
   "image": "Картинка",
   "image-internet": "Картинка з Інтернету",
+  "images": "Картинки",
   "image-size": {
     "custom": "Будь-який",
     "full": "Повний",
@@ -292,9 +296,11 @@
   "in": "у",
   "in-blocked": "Заблокував",
   "in-blocked-plural": "Заблокували",
+  "in-blog": "У блозі",
   "increase-indent": "Збільшити відступ",
   "in-friends": "У друзях",
   "inline-formula": "Вбудована формула",
+  "in-newsfeed": "У стрічці новин",
   "in-post": "У пості",
   "insert-into-text": "Вставити в текст",
   "insert-link": "Вставити посилання",
@@ -390,6 +396,7 @@
   "login-incorrect": "Неправильне ім'я блога або пароль",
   "male": "Чоловічий",
   "male-short": "ч.",
+  "many": "Багато",
   "mark": "Позначити",
   "mark-all-read": "Усі прочитані",
   "mark-read": "Позначити як прочитане",
@@ -447,6 +454,7 @@
   "nothing-yet": "Тут поки що порожньо.",
   "notify-about-update": "Повідомити підписникам про оновлення",
   "notify-followers": "Повідомити підписникам",
+  "not-matter": "Не має значення",
   "not-now": "Не зараз",
   "not-publish-my-complaint": "Будь ласка, не публікуйте мою скаргу",
   "not-show-complaints": "Не показувати скарги",
@@ -491,6 +499,7 @@
   "post-not-allowed": "Ви не в змозі писати у цей блог.",
   "post-preview": "Перегляд поста",
   "preparing": "Підготовка...",
+  "present": "Є",
   "preserve-formatting": "Зберегти форматування",
   "previous-image": "Попередня картинка",
   "principal-title": {
@@ -581,6 +590,7 @@
   "remind-later": "Нагадати пізніше",
   "rename-token": "Перейменувати токен",
   "reply": "Відповісти",
+  "reply-my-comment": "Відповідь на мій коментар",
   "reply-prev-comment": "Відповідь на попередній коментар",
   "report-sheriff": "Поскаржитись до шерифа",
   "report-sheriff-sent": "Скаргу до шерифа надіслано",
@@ -855,6 +865,7 @@
   },
   "settings": "Налаштування",
   "settings-incorrect-values": "Деякі налаштування встановлені в неправильні значення.",
+  "several": "Кілька",
   "share": "Поділитися",
   "share-page": "Поділитися сторінкою",
   "sheriff-decided-not-publish-complaints": "Шериф прийняв рішення не публікувати скарги.",
@@ -968,6 +979,7 @@
   "user-comments-hidden": "Коментарі цього користувача приховуються",
   "validating-access-request": "Перевірка запиту на доступ",
   "verify-signature": "Перевірити підпис",
+  "video": "Відео",
   "video-internet": "Відео з Інтернету",
   "view-as-chart": "У вигляді діаграми",
   "view-as-list": "У вигляді списку",
@@ -998,6 +1010,7 @@
   "whats-new": "Що у вас нового?",
   "where-from": "Звідки його взято?",
   "where-go": "Куди ви бажаєте піти?",
+  "where-look": "Де шукати",
   "why-delete-blog": "Чому ви видаляєте блог? (за бажанням)",
   "why-not-set-avatar": "<0>Ще не встановили аватар?</0> По аватару вас буде легко впізнати в обговореннях.",
   "why-not-set-full-name": "<0>Ще не встановили повне ім'я?</0> Гарне повне ім'я буде з'являтися у ваших постах і коментарях замість імені користувача. Наприклад, замість <1>{name}</1> буде написано <1>{full}</1>. Це може бути ваше справжнє ім'я або будь-яке інше, яке вам подобається. І його можна буде змінити в будь-який момент.",
