--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -606,6 +606,7 @@
   "retype-password": "Пожалуйста, введите пароль еще раз",
   "rotate-left": "Повернуть влево",
   "rotate-right": "Повернуть вправо",
+  "safe-search": "Безопасный поиск",
   "save": "Сохранить",
   "scope": {
     "add-comment": "Создавать комментарии, подписанные вашим именем",
@@ -774,6 +775,8 @@
           "text": "Вставлять только текст"
         },
         "search_node-name": "Имя узла поисковой системы",
+        "search_safe-search_default": "Безопасный поиск по умолчанию",
+        "search_sheriff-name": "Имя шерифа для безопасного поиска",
         "src-format_default": "Форматирование профиля и других текстов (по умолчанию)",
         "src-format_default-items": {
           "html--visual": "Визуальный редактор",
