--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -606,6 +606,7 @@
   "retype-password": "Будь ласка, введіть пароль ще раз",
   "rotate-left": "Повернути ліворуч",
   "rotate-right": "Повернути праворуч",
+  "safe-search": "Безпечний пошук",
   "save": "Зберегти",
   "scope": {
     "add-comment": "Створювати коментарі, підписані вашим ім'ям",
@@ -774,6 +775,8 @@
           "text": "Вставляти тільки текст"
         },
         "search_node-name": "Ім'я вузла пошукової системи",
+        "search_safe-search_default": "Безпечний пошук за замовчуванням",
+        "search_sheriff-name": "Ім'я шерифа для безпечного пошуку",
         "src-format_default": "Форматування профілю та інших текстів (за замовчуванням)",
         "src-format_default-items": {
           "html--visual": "Візуальний редактор",
