Filtering search results by date.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -143,6 +143,7 @@
   "current": "Current",
   "current-password": "Current password",
   "danger-request-delete-blog": "<1>Danger!</1> By submitting this form, you send a request to your Moera provider to <0>delete your blog completely with all the data, including all personal information</0>. All your data will be <0>lost without recovery</0>. Press this button only if you are absolutely sure!",
+  "date": "Date",
   "decision": "Decision",
   "decision-sheriff-initiative": "The decision was made at the sheriff's initiative.",
   "decision-upon-complaint": "The decision was made upon <0>a complaint</0> by another user.",
@@ -384,6 +385,7 @@
   "language": "Language",
   "large-image": "Large",
   "last-post": "last",
+  "last-three-months": "In the last 3 months",
   "last-used": "Last used:",
   "link": "Link",
   "link-copied": "Link copied to the clipboard",
@@ -404,10 +406,12 @@
   "mention": "Mention",
   "menu": "Menu",
   "message": "Message",
+  "month-ago": "A month ago",
   "more": "More",
   "more-links": "{count} {count, plural, one {link} other {links}}",
   "more-reactions": "{remaining} more",
   "more-reactions-hidden": "{remaining} more hidden",
+  "more-year": "More than a year ago",
   "must-not-empty": "Must not be empty",
   "must-single-english-word": "Must be a single English word",
   "mutual-friends": "Mutual friends",
@@ -931,7 +935,12 @@
   "text-formatting": "Text formatting",
   "text-only": "Text only",
   "text-optional": "Text (optional)",
+  "this-month": "This month",
+  "this-week": "This week",
+  "this-year": "This year",
+  "three-months-ago": "3 months ago",
   "title": "Title",
+  "today": "Today",
   "token-copied": "Token copied to the clipboard",
   "token-name": "Token name",
   "token-usage-warning": "Please note that the token gives admin access to your blog. Never give it to anybody you don't trust!",
@@ -1009,6 +1018,7 @@
   "want-set-right-now": "Want to set it right now?",
   "want-set-right-now-click-circle": "Want to set it right now? Click on the circle.",
   "want-turn-off-story-type": "Do you really want to turn off {type}",
+  "week-ago": "A week ago",
   "welcome": "Welcome!",
   "whats-new": "What's new with you?",
   "where-from": "Where it comes from?",
@@ -1024,7 +1034,9 @@
   "write-down-words": "<0>Please write down, save to a file, or print these words and keep them in a safe place.</0><1>If you lose these words, they cannot be recovered, and you will completely lose control over your registered name.</1><2>You will need them for any operations with the name ‘{name}’.</2>",
   "written-down-delete-words": "Written down. Delete the words from the server",
   "wrong-reset-token": "Wrong secret code",
+  "year-ago": "A year ago",
   "yes": "Yes",
+  "yesterday": "Yesterday",
   "you-at-home": "You are at your home node",
   "you-can-close-page": "You can close this page now.",
   "you-can-copy-token": "You can now copy your new token. For security reasons, this cannot be done later.",
