--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -143,6 +143,7 @@
   "current": "Obecny",
   "current-password": "Obecne hasło",
   "danger-request-delete-blog": "<1>Niebezpieczeństwo!</1> Przesyłając ten formularz, wysyłasz prośbę do swojego dostawcy Moera o <0>całkowite usunięcie Twojego bloga wraz ze wszystkimi danymi, w tym wszystkimi danymi osobowymi</0>. Wszystkie dane zostaną <0>utracone bez możliwości ich odzyskania</0>. Naciśnij ten przycisk tylko wtedy, gdy masz absolutną pewność!",
+  "date": "Data",
   "decision": "Decyzja",
   "decision-sheriff-initiative": "Decyzja została podjęta z inicjatywy szeryfa.",
   "decision-upon-complaint": "Decyzja została podjęta po <0>skardze</0> złożonej przez innego użytkownika.",
@@ -384,6 +385,7 @@
   "language": "Język",
   "large-image": "Duży",
   "last-post": "ostatni",
+  "last-three-months": "W ciągu ostatnich 3 miesięcy",
   "last-used": "Ostatnio używane:",
   "link": "Link",
   "link-copied": "Link skopiowany do schowka",
@@ -404,10 +406,12 @@
   "mention": "Wzmianka",
   "menu": "Menu",
   "message": "Wiadomość",
+  "month-ago": "Miesiąc temu",
   "more": "Więcej",
   "more-links": "{count} {count, plural, one {link} other {linki}}",
   "more-reactions": "{remaining} więcej",
   "more-reactions-hidden": "{remaining} więcej ukrytych",
+  "more-year": "Ponad rok temu",
   "must-not-empty": "Nie może być puste",
   "must-single-english-word": "Musi być pojedynczym angielskim słowem",
   "mutual-friends": "Wspólni znajomi",
@@ -931,7 +935,12 @@
   "text-formatting": "Formatowanie tekstu",
   "text-only": "Tylko tekst",
   "text-optional": "Tekst (opcjonalnie)",
+  "this-month": "W tym miesiącu",
+  "this-week": "W tym tygodniu",
+  "this-year": "W tym roku",
+  "three-months-ago": "3 miesiące temu",
   "title": "Tytuł",
+  "today": "Dzisiaj",
   "token-copied": "Token skopiowany do schowka",
   "token-name": "Nazwa tokenu",
   "token-usage-warning": "Prosimy pamiętać, że token daje dostęp do bloga. Nigdy nie udostępniaj go osobom, którym nie ufasz!",
@@ -1009,6 +1018,7 @@
   "want-set-right-now": "Chcesz ustawić je teraz?",
   "want-set-right-now-click-circle": "Chcesz ustawić go teraz? Kliknij na kółko.",
   "want-turn-off-story-type": "Czy na pewno chcesz wyłączyć {type}",
+  "week-ago": "Tydzień temu",
   "welcome": "Witaj!",
   "whats-new": "Co nowego u ciebie?",
   "where-from": "Skąd to pochodzi?",
@@ -1024,7 +1034,9 @@
   "write-down-words": "<0>Proszę zapisać, zapisać w pliku lub wydrukować te słowa i przechowywać je w bezpiecznym miejscu.</0><1>Jeśli stracisz te słowa, nie można ich odzyskać i całkowicie stracisz kontrolę nad swoją zarejestrowaną nazwą.</1><2>Będziesz ich potrzebować do wszystkich operacji związanych z nazwą ‘{name}’.</2>",
   "written-down-delete-words": "Zapisano. Usuń słowa z serwera",
   "wrong-reset-token": "Nieprawidłowy kod sekretny",
+  "year-ago": "Rok temu",
   "yes": "Tak",
+  "yesterday": "Wczoraj",
   "you-at-home": "Jesteś w swoim węźle domowym",
   "you-can-close-page": "Możesz teraz zamknąć tę stronę.",
   "you-can-copy-token": "Możesz teraz skopiować swój nowy token. Ze względów bezpieczeństwa nie będzie to możliwe później.",
