--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -143,6 +143,7 @@
   "current": "Текущий",
   "current-password": "Текущий пароль",
   "danger-request-delete-blog": "<1>Опасно!</1> Отправив эту форму, вы отправите своему провайдеру Moera запрос на <0>полное удаление вашего блога со всеми данными, включая всю личную информацию</0>. Все ваши данные будут <0>потеряны без возможности восстановления</0>. Нажимайте эту кнопку только если вы абсолютно уверены!",
+  "date": "Дата",
   "decision": "Решение",
   "decision-sheriff-initiative": "Решение было принято по инициативе шерифа.",
   "decision-upon-complaint": "Решение было принято по <0>жалобе</0> другого пользователя.",
@@ -384,6 +385,7 @@
   "language": "Язык",
   "large-image": "Большая",
   "last-post": "последний",
+  "last-three-months": "В последние 3 месяца",
   "last-used": "Последнее использование:",
   "link": "Ссылка",
   "link-copied": "Ссылка скопирована в буфер обмена",
@@ -404,10 +406,12 @@
   "mention": "Упомянуть",
   "menu": "Меню",
   "message": "Сообщение",
+  "month-ago": "Месяц назад",
   "more": "Ещё",
   "more-links": "{count} {count, plural, one {ссылка} few {ссылки} other {ссылок}}",
   "more-reactions": "Ещё {remaining}",
   "more-reactions-hidden": "Ещё {remaining} {remaining, plural, one {скрытая} other {скрытых}}",
+  "more-year": "Больше года назад",
   "must-not-empty": "Обязательное поле",
   "must-single-english-word": "Введите одно английское слово",
   "mutual-friends": "Взаимные друзья",
@@ -931,7 +935,12 @@
   "text-formatting": "Форматирование текста",
   "text-only": "Только текст",
   "text-optional": "Текст (необязательно)",
+  "this-month": "В этом месяце",
+  "this-week": "На этой неделе",
+  "this-year": "В этом году",
+  "three-months-ago": "3 месяца назад",
   "title": "Заголовок",
+  "today": "Сегодня",
   "token-copied": "Токен скопирован в буфер обмена",
   "token-name": "Имя токена",
   "token-usage-warning": "Имейте в виду, что токен даёт доступ к вашему блогу с правами администратора. Никогда не передавайте его тому, кому вы не доверяете!",
@@ -1009,6 +1018,7 @@
   "want-set-right-now": "Хотите установить его прямо сейчас?",
   "want-set-right-now-click-circle": "Хотите установить её прямо сейчас? Нажмите на кружок.",
   "want-turn-off-story-type": "Вы действительно хотите выключить {type}?",
+  "week-ago": "Неделю назад",
   "welcome": "Привет!",
   "whats-new": "Что у вас нового?",
   "where-from": "Откуда он взят?",
@@ -1024,7 +1034,9 @@
   "write-down-words": "<0>Пожалуйста, запишите, сохраните в файл или распечатайте эти слова и храните их в безопасном месте.</0><1>Если вы потеряете эти слова, их нельзя будет восстановить, и вы полностью потеряете контроль над вашим зарегистрированным именем.</1><2>Они вам понадобятся для любых операций с именем ‘{name}’.</2>",
   "written-down-delete-words": "Записано. Удали слова с сервера",
   "wrong-reset-token": "Неправильный секретный код",
+  "year-ago": "Год назад",
   "yes": "Да",
+  "yesterday": "Вчера",
   "you-at-home": "Это ваш домашний блог",
   "you-can-close-page": "Теперь вы можете закрыть эту страницу.",
   "you-can-copy-token": "Сейчас вы можете скопировать ваш новый токен. По соображениям безопасности, это нельзя будет сделать позднее.",
