--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -143,6 +143,7 @@
   "current": "Поточний",
   "current-password": "Поточний пароль",
   "danger-request-delete-blog": "<1>Небезпечно!</1> Надіславши цю форму, ви надсилаєте запит до вашого провайдера Moera на <0>повне видалення вашого блогу з усіма даними, включно з усією особистою інформацією</0>. Всі ваші дані будуть <0>втрачені без можливості відновлення</0>. Натискайте цю кнопку, тільки якщо ви абсолютно впевнені!",
+  "date": "Дата",
   "decision": "Рішення",
   "decision-sheriff-initiative": "Рішення було прийнято за ініціативою шерифа.",
   "decision-upon-complaint": "Рішення було прийнято за <0>скаргою</0> іншого користувача.",
@@ -384,6 +385,7 @@
   "language": "Мова",
   "large-image": "Велика",
   "last-post": "останній",
+  "last-three-months": "У останні 3 місяці",
   "last-used": "Останнє використання:",
   "link": "Посилання",
   "link-copied": "Посилання скопійоване до буфера обміну",
@@ -404,10 +406,12 @@
   "mention": "Згадати",
   "menu": "Меню",
   "message": "Повідомлення",
+  "month-ago": "Місяць тому",
   "more": "Ще",
   "more-links": "{count} {count, plural, one {посилання} few {посилання} other {посилань}}",
   "more-reactions": "Ще {remaining}",
   "more-reactions-hidden": "Ещё {remaining} {remaining, plural, one {прихована} other {прихованих}}",
+  "more-year": "Понад рік тому",
   "must-not-empty": "Обов'язкове поле",
   "must-single-english-word": "Введіть одне англійське слово",
   "mutual-friends": "Взаємні друзі",
@@ -931,7 +935,12 @@
   "text-formatting": "Форматування текста",
   "text-only": "Тільки текст",
   "text-optional": "Текст (за бажанням)",
+  "this-month": "Цього місяця",
+  "this-week": "Цього тижня",
+  "this-year": "Цього року",
+  "three-months-ago": "3 місяці тому",
   "title": "Заголовок",
+  "today": "Сьогодні",
   "token-copied": "Токен скопійований до буфера обміну",
   "token-name": "Ім'я токена",
   "token-usage-warning": "Майте на увазі, що токен дає доступ до вашого блогу з правами адміністратора. Ніколи не передавайте його тому, кому ви не довіряєте!",
@@ -1009,6 +1018,7 @@
   "want-set-right-now": "Хочете встановити його прямо зараз?",
   "want-set-right-now-click-circle": "Хочете встановити його прямо зараз? Натисніть на кружечок.",
   "want-turn-off-story-type": "Ви дійсно бажаєте вимкнути {type}",
+  "week-ago": "Тиждень тому",
   "welcome": "Вітаю!",
   "whats-new": "Що у вас нового?",
   "where-from": "Звідки його взято?",
@@ -1024,7 +1034,9 @@
   "write-down-words": "<0>Будь ласка, запишіть, збережіть у файл або роздрукуйте ці слова і зберігайте їх у безпечному місці.</0><1>Якщо ви втратите ці слова, їх неможливо буде відновити, і ви повністю втратите контроль над вашим зареєстрованим ім'ям.</1><2>Вони вам знадобляться для будь-яких операцій з ім'ям ‘{name}’.</2>",
   "written-down-delete-words": "Записано. Видали слова з сервера",
   "wrong-reset-token": "Невірний секретний код",
+  "year-ago": "Рік тому",
   "yes": "Так",
+  "yesterday": "Вчора",
   "you-at-home": "Це ваш домашній блог",
   "you-can-close-page": "Зараз ви можете закрити цю сторінку.",
   "you-can-copy-token": "Зараз ви можете скопіювати ваш новий токен. З міркувань безпеки, це не можна буде зробити пізніше.",
