A button to clear search filters.

--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -71,6 +71,7 @@
   "change-password": "Змінити пароль",
   "choose-decision": "Будь ласка, оберіть рішення...",
   "choose-request": "Виберіть прохання...",
+  "clear-filters": "Очистити фільтри",
   "clear-formatting": "Прибрати форматування",
   "clear-selection": "Відмінити вибір",
   "client-settings-changed-conflict": "Налаштування клієнта були кимось змінені.",
