--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -71,6 +71,7 @@
   "change-password": "Change password",
   "choose-decision": "Please, choose your decision...",
   "choose-request": "Choose a request...",
+  "clear-filters": "Clear filters",
   "clear-formatting": "Clear formatting",
   "clear-selection": "Clear selection",
   "client-settings-changed-conflict": "Client settings were changed by somebody.",
