--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -71,6 +71,7 @@
   "change-password": "Zmień hasło",
   "choose-decision": "Proszę wybrać swoją decyzję...",
   "choose-request": "Wybierz żądanie...",
+  "clear-filters": "Wyczyść filtry",
   "clear-formatting": "Wyczyść formatowanie",
   "clear-selection": "Wyczyść wybór",
   "client-settings-changed-conflict": "Ustawienia klienta zostały zmienione przez kogoś innego.",
