Allow sending sheriff's orders to any node. If the node has not accepted the sheriff's governance, the order will be ignored but recorded on the sheriff's node and sent to the search server.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -450,6 +450,7 @@
   "no-name-set": "nie ustawiono nazwy",
   "no-requests-available": "Brak dostępnych żądań.",
   "normal": "Normalny",
+  "not-accept-sheriff-governance": "Nie akceptuj rządów szeryfa",
   "not-allowed": "Nie dozwolone",
   "not-connected-home": "Nie zalogowano",
   "note-complaints-public": "<b>Uwaga:</b> wszystkie skargi kierowane do szeryfa są publiczne. Możesz poprosić o niepublikowanie Twojej skargi z jakiegokolwiek powodu, ale ostateczna decyzja należy do szeryfa.",
