--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -450,6 +450,7 @@
   "no-name-set": "имя не задано",
   "no-requests-available": "Нет доступных просьб.",
   "normal": "Обычный",
+  "not-accept-sheriff-governance": "Не одобрил присмотр шерифа",
   "not-allowed": "Недопустимо",
   "not-connected-home": "Не вошли",
   "note-complaints-public": "<b>Примечание:</b> Все жалобы шерифу являются общедоступными. Вы можете попросить не публиковать вашу жалобу по какой-либо причине, но окончательное решение принимает шериф.",
