--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -450,6 +450,7 @@
   "no-name-set": "ім'я не задано",
   "no-requests-available": "Немає доступних прохань.",
   "normal": "Звичайний",
+  "not-accept-sheriff-governance": "Не схвалив нагляд шерифа",
   "not-allowed": "Неприпустимо",
   "not-connected-home": "Не увійшли",
   "note-complaints-public": "<b>Примітка:</b> Усі скарги шерифові є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
